# AutoChunks

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
autochunk/: __init__.py  __main__.py  autochunker.py  cli.py  config.py
autochunk/adapters/: __init__.py  haystack.py  langchain.py  llamaindex.py
autochunk/chunkers/: __init__.py  agentic.py  base.py  contextual_retrieval.py  fixed_length.py  html_section.py  hybrid_semantic_stat.py  layout_aware.py  parent_child.py  proposition.py  python_ast.py  recursive_character.py  semantic_local.py  sentence_aware.py
autochunk/chunkers/bridges/langchain/: character.py  html.py  json.py  markdown.py  python.py  recursive.py  token.py
autochunk/embedding/: __init__.py  adapter.py  base.py  hashing.py  local.py  ollama.py  openai.py  tokenizer.py
autochunk/enrichment/: contextual.py
autochunk/eval/: harness.py  metrics.py  ragas_eval.py  synthetic.py
autochunk/quality/: __init__.py  deduplicator.py  overlap_optimizer.py  post_processor.py  scorer.py
autochunk/retrieval/: in_memory.py  parent_child.py
autochunk/storage/: cache.py  plan.py
autochunk/utils/: hashing.py  io.py  logger.py  telemetry.py  text.py
autochunk/web/: server.py
autochunk/web/static/: app.js  index.html  style.css
docs/: api_reference.md  comparison_autorag.md  getting_started.md  index.md  integrations.md  requirements.txt
docs/core_concepts/: eval_flow.md  evaluation.md  ground_truth.md  objectives.md  strategies.md
docs/guides/: configuration.md  dashboard_walkthrough.md  enterprise_security.md  ragas_evaluation.md
docs/javascripts/: mermaid.js
examples/: api_usage.py  pdf_demo.py  run_optimize.py
scripts/: check_links.py  create_sample_pdf.py
