[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autochunks"
version = "0.0.8"
description = "Autonomous Retrieval Optimization for RAG"
readme = "README.md"
authors = [{name = "Sumit Joshi"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["rag", "chunking", "retrieval", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "loguru",
    "arize-phoenix>=4.3.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "nltk",
    "pymupdf4llm",
    "sentence-transformers",
    "torch",
    "fastapi",
    "uvicorn",
    "python-multipart"
]

[project.urls]
Homepage = "https://github.com/s8ilabs/AutoChunks"
Documentation = "https://autochunks.readthedocs.io/"
Repository = "https://github.com/s8ilabs/AutoChunks"
Issues = "https://github.com/s8ilabs/AutoChunks/issues"

[project.scripts]
autochunks = "autochunk.cli:main"
